@@ -13,26 +13,32 @@ import org.apache.commons.lang3.reflect.FieldUtils;
 import org.apache.kafka.connect.data.ConnectSchema;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.errors.ConnectException;
+import org.apache.kafka.connect.sink.ErrantRecordReporter;
 import org.apache.kafka.connect.sink.SinkRecord;
+import org.apache.kafka.connect.sink.SinkTaskContext;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mockito;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static junit.framework.TestCase.assertNotNull;
 import static junit.framework.TestCase.fail;
 import static org.mockito.Mockito.*;
 
-public class CosmosDBSinkTaskTest {
+public class CosmosDBSinkTaskTestNotFails {
     private final String topicName = "testtopic";
     private final String containerName = "container666";
     private final String databaseName = "fakeDatabase312";
     private CosmosDBSinkTask testTask;
     private CosmosClient mockCosmosClient;
     private CosmosContainer mockContainer;
+    private SinkTaskContext mockContext = Mockito.mock(SinkTaskContext.class);
+    private ErrantRecordReporter mockErrantReporter = Mockito.mock(ErrantRecordReporter.class);
 
     @Before
     public void setup() throws IllegalAccessException {
@@ -42,6 +48,7 @@ public class CosmosDBSinkTaskTest {
         Map<String, String> settingAssignment = CosmosDBSinkConfigTest.setupConfigs();
         settingAssignment.put(CosmosDBSinkConfig.COSMOS_CONTAINER_TOPIC_MAP_CONF, topicName + "#" + containerName);
         settingAssignment.put(CosmosDBSinkConfig.COSMOS_DATABASE_NAME_CONF, databaseName);
+        settingAssignment.put(CosmosDBSinkConfig.TOLERANCE_ON_ERROR_CONFIG, "all");
         CosmosDBSinkConfig config = new CosmosDBSinkConfig(settingAssignment);
         FieldUtils.writeField(testTask, "config", config, true);
 
@@ -51,53 +58,35 @@ public class CosmosDBSinkTaskTest {
         when(mockCosmosClient.getDatabase(anyString())).thenReturn(mockDatabase);
         mockContainer = Mockito.mock(CosmosContainer.class);
         when(mockDatabase.getContainer(any())).thenReturn(mockContainer);
+        when(mockContext.errantRecordReporter()).thenReturn(mockErrantReporter);
 
         FieldUtils.writeField(testTask, "client", mockCosmosClient, true);
+
+    }
+    @After()
+    public void resetContext() throws IllegalAccessException {
+        FieldUtils.writeField(testTask,  "context", null, true);
     }
 
-    @Test
-    public void testPutPlainTextString() {
-        Schema stringSchema = new ConnectSchema(Schema.Type.STRING);
-
-        SinkRecord record = new SinkRecord(topicName, 1, stringSchema, "nokey", stringSchema, "foo", 0L);
-        assertNotNull(record.value());
-
-        //Make mock connector to serialize a non-JSON payload
-        when(mockContainer.upsertItem(any())).then((invocation) -> {
-            Object item = invocation.getArgument(0);
-            //Will throw exception:
-            try {
-                JsonNode jsonNode = new ObjectMapper().readTree(item.toString());
-                assertNotNull(jsonNode);
-                return null;
-            } catch (JsonParseException jpe) {
-                throw new BadRequestException("Unable to serialize JSON request", jpe);
-            }
-        });
-
-        try {
-            testTask.put(Arrays.asList(record));
-            fail("Expected ConnectException on bad message");
-        } catch (ConnectException ce) {
-
-        } catch (Throwable t) {
-            fail("Expected ConnectException, but got: " + t.getClass().getName());
-        }
-
-        verify(mockContainer, times(1)).upsertItem("foo");
-    }
 
     @Test
-    public void testPutMap() {
+    public void testPutMapThatFailsDoesNotStopTask() throws JsonProcessingException, IllegalAccessException {
+
         Schema stringSchema = new ConnectSchema(Schema.Type.STRING);
         Schema mapSchema = new ConnectSchema(Schema.Type.MAP);
-        Map<String, String> map = new HashMap<>();
-        map.put("foo", "baaarrrrrgh");
-
-        SinkRecord record = new SinkRecord(topicName, 1, stringSchema, "nokey", mapSchema, map, 0L);
-        assertNotNull(record.value());
-        testTask.put(Arrays.asList(record));
-        verify(mockContainer, times(1)).upsertItem(map);
+        when(mockContainer.upsertItem(any())).thenThrow(new BadRequestException("Something"));
+        SinkRecord record = new SinkRecord(topicName, 1, stringSchema, "nokey", mapSchema, "{", 0L);
+        testTask.put(List.of(record));
+    }
+    @Test
+    public void testPutMapThatFailsDoesNotStopTaskWithdlq() throws JsonProcessingException, IllegalAccessException {
+        FieldUtils.writeField(testTask,  "context", mockContext, true);
+        Schema stringSchema = new ConnectSchema(Schema.Type.STRING);
+        Schema mapSchema = new ConnectSchema(Schema.Type.MAP);
+        when(mockContainer.upsertItem(any())).thenThrow(new BadRequestException("Something"));
+        SinkRecord record = new SinkRecord(topicName, 1, stringSchema, "nokey", mapSchema, "{", 0L);
+        testTask.put(List.of(record));
+        verify(mockContext.errantRecordReporter(), times(1)).report(any(), any());
     }
 }
 
